happy/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Parser.y
-----------------------------------------------------------------------------

state 2 contains 1 reduce/reduce conflicts.
state 60 contains 1 shift/reduce conflicts.
state 65 contains 1 shift/reduce conflicts.
state 66 contains 1 shift/reduce conflicts.
state 70 contains 1 shift/reduce conflicts.
state 71 contains 1 shift/reduce conflicts.
state 72 contains 1 shift/reduce conflicts.
state 81 contains 9 shift/reduce conflicts.
state 82 contains 1 shift/reduce conflicts.
state 86 contains 1 shift/reduce conflicts.
state 87 contains 1 shift/reduce conflicts.
state 92 contains 1 shift/reduce conflicts.
state 109 contains 9 shift/reduce conflicts.
state 114 contains 1 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 116 contains 1 shift/reduce conflicts.
state 117 contains 1 shift/reduce conflicts.
state 119 contains 1 shift/reduce conflicts.
state 122 contains 7 shift/reduce conflicts.
state 124 contains 1 shift/reduce conflicts.
state 127 contains 9 shift/reduce conflicts.
state 129 contains 1 shift/reduce conflicts.
state 130 contains 1 shift/reduce conflicts.
state 131 contains 1 shift/reduce conflicts.
state 132 contains 1 shift/reduce conflicts.
state 133 contains 1 shift/reduce conflicts.
state 134 contains 1 shift/reduce conflicts.
state 146 contains 9 shift/reduce conflicts.
state 149 contains 7 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Program                            (0)
	Program -> Types Declarations Functions eof        (1)
	Types ->                                           (2)
	Types -> Types TypeSub                             (3)
	TypeSub -> Lineno struct id '{' NestedDecl '}' ';'   (4)
	NestedDecl ->                                      (5)
	NestedDecl -> NestedDecl Decl ';'                  (6)
	Decl -> Lineno Type id                             (7)
	Type -> int                                        (8)
	Type -> bool                                       (9)
	Type -> struct id                                  (10)
	Declarations ->                                    (11)
	Declarations -> Declarations Declaration           (12)
	Declaration -> Lineno Type IdList ';'              (13)
	IdList ->                                          (14)
	IdList -> id                                       (15)
	IdList -> IdList ',' id                            (16)
	Functions ->                                       (17)
	Functions -> Functions Function                    (18)
	Function -> Lineno fun id Parameters RetType '{' Declarations StatementList '}'   (19)
	Parameters -> '(' ')'                              (20)
	Parameters -> '(' DeclList ')'                     (21)
	DeclList -> Decl                                   (22)
	DeclList -> DeclList ',' Decl                      (23)
	RetType -> Type                                    (24)
	RetType -> void                                    (25)
	Statement -> Block                                 (26)
	Statement -> Assignment                            (27)
	Statement -> Print                                 (28)
	Statement -> Read                                  (29)
	Statement -> Conditional                           (30)
	Statement -> Loop                                  (31)
	Statement -> Delete                                (32)
	Statement -> Ret                                   (33)
	Statement -> Invocation                            (34)
	Block -> '{' StatementList '}'                     (35)
	StatementList ->                                   (36)
	StatementList -> StatementList Statement           (37)
	Assignment -> Lineno LValue '=' Expression ';'     (38)
	Print -> Lineno print Expression Endl ';'          (39)
	Endl ->                                            (40)
	Endl -> endl                                       (41)
	Read -> Lineno read LValue ';'                     (42)
	Conditional -> Lineno if '(' Expression ')' Block ElseBlock   (43)
	ElseBlock ->                                       (44)
	ElseBlock -> else Block                            (45)
	Loop -> Lineno while '(' Expression ')' Block      (46)
	Delete -> Lineno delete Expression ';'             (47)
	Ret -> Lineno return MaybeExpr ';'                 (48)
	MaybeExpr ->                                       (49)
	MaybeExpr -> Expression                            (50)
	Invocation -> Lineno id Arguments ';'              (51)
	LValue -> Lineno id                                (52)
	LValue -> Lineno LValue '.' id                     (53)
	Expression -> Boolterm                             (54)
	Expression -> Lineno Boolterm boolOp Boolterm      (55)
	Boolterm -> Simple                                 (56)
	Boolterm -> Lineno Simple cmpOp Simple             (57)
	Simple -> Term                                     (58)
	Simple -> Lineno Term '+' Term                     (59)
	Simple -> Lineno Term '-' Term                     (60)
	Term -> Unary                                      (61)
	Term -> Lineno Unary '*' Unary                     (62)
	Term -> Lineno Unary '/' Unary                     (63)
	Unary -> Selector                                  (64)
	Unary -> Lineno '!' Selector                       (65)
	Unary -> Lineno '-' Selector                       (66)
	Selector -> Factor                                 (67)
	Selector -> Lineno Selector '.' id                 (68)
	Factor -> '(' Expression ')'                       (69)
	Factor -> Lineno id                                (70)
	Factor -> Lineno id Arguments                      (71)
	Factor -> Lineno num                               (72)
	Factor -> Lineno true                              (73)
	Factor -> Lineno false                             (74)
	Factor -> Lineno new id                            (75)
	Factor -> Lineno null                              (76)
	Arguments -> Expression                            (77)
	Arguments -> Arguments ',' Expression              (78)
	Lineno ->                                          (79)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	struct         { TokenStruct }
	int            { TokenInt }
	bool           { TokenBool }
	fun            { TokenFun }
	void           { TokenVoid }
	print          { TokenPrint }
	endl           { TokenEndl }
	read           { TokenRead }
	if             { TokenIf }
	else           { TokenElse }
	while          { TokenWhile }
	delete         { TokenDelete }
	return         { TokenReturn }
	true           { TokenTrue }
	false          { TokenFalse }
	new            { TokenNew }
	null           { TokenNull }
	eof            { TokenEOF }
	id             { TokenId $$ }
	boolOp         { TokenBoolOp $$ }
	cmpOp          { TokenCmpOp $$ }
	num            { TokenNum $$ }
	'='            { TokenEq }
	'+'            { TokenPlus }
	'-'            { TokenMinus }
	'*'            { TokenTimes }
	'/'            { TokenDiv }
	'('            { TokenOB }
	')'            { TokenCB }
	'{'            { TokenLBrace }
	'}'            { TokenRBrace }
	';'            { TokenSemi }
	','            { TokenComma }
	'.'            { TokenDot }
	'!'            { TokenBang }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Program         rule  1
	Types           rules 2, 3
	TypeSub         rule  4
	NestedDecl      rules 5, 6
	Decl            rule  7
	Type            rules 8, 9, 10
	Declarations    rules 11, 12
	Declaration     rule  13
	IdList          rules 14, 15, 16
	Functions       rules 17, 18
	Function        rule  19
	Parameters      rules 20, 21
	DeclList        rules 22, 23
	RetType         rules 24, 25
	Statement       rules 26, 27, 28, 29, 30, 31, 32, 33, 34
	Block           rule  35
	StatementList   rules 36, 37
	Assignment      rule  38
	Print           rule  39
	Endl            rules 40, 41
	Read            rule  42
	Conditional     rule  43
	ElseBlock       rules 44, 45
	Loop            rule  46
	Delete          rule  47
	Ret             rule  48
	MaybeExpr       rules 49, 50
	Invocation      rule  51
	LValue          rules 52, 53
	Expression      rules 54, 55
	Boolterm        rules 56, 57
	Simple          rules 58, 59, 60
	Term            rules 61, 62, 63
	Unary           rules 64, 65, 66
	Selector        rules 67, 68
	Factor          rules 69, 70, 71, 72, 73, 74, 75, 76
	Arguments       rules 77, 78
	Lineno          rule  79

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	struct         reduce using rule 2
	int            reduce using rule 2
	bool           reduce using rule 2
	fun            reduce using rule 2
	eof            reduce using rule 2

	Program        goto state 3
	Types          goto state 2

State 1



	Types          goto state 2

State 2

	Program -> Types . Declarations Functions eof       (rule 1)
	Types -> Types . TypeSub                            (rule 3)

	struct         reduce using rule 79
			(reduce using rule 11)

	int            reduce using rule 11
	bool           reduce using rule 11
	fun            reduce using rule 11
	eof            reduce using rule 11

	TypeSub        goto state 4
	Declarations   goto state 5
	Lineno         goto state 6

State 3

	%start_parse -> Program .                           (rule 0)

	%eof           accept


State 4

	Types -> Types TypeSub .                            (rule 3)

	struct         reduce using rule 3
	int            reduce using rule 3
	bool           reduce using rule 3
	fun            reduce using rule 3
	eof            reduce using rule 3


State 5

	Program -> Types Declarations . Functions eof       (rule 1)
	Declarations -> Declarations . Declaration          (rule 12)

	struct         reduce using rule 79
	int            reduce using rule 79
	bool           reduce using rule 79
	fun            reduce using rule 17
	eof            reduce using rule 17

	Declaration    goto state 8
	Functions      goto state 9
	Lineno         goto state 10

State 6

	TypeSub -> Lineno . struct id '{' NestedDecl '}' ';'    (rule 4)

	struct         shift, and enter state 7


State 7

	TypeSub -> Lineno struct . id '{' NestedDecl '}' ';'    (rule 4)

	id             shift, and enter state 18


State 8

	Declarations -> Declarations Declaration .          (rule 12)

	struct         reduce using rule 12
	int            reduce using rule 12
	bool           reduce using rule 12
	fun            reduce using rule 12
	print          reduce using rule 12
	read           reduce using rule 12
	if             reduce using rule 12
	while          reduce using rule 12
	delete         reduce using rule 12
	return         reduce using rule 12
	eof            reduce using rule 12
	id             reduce using rule 12
	'{'            reduce using rule 12
	'}'            reduce using rule 12


State 9

	Program -> Types Declarations Functions . eof       (rule 1)
	Functions -> Functions . Function                   (rule 18)

	fun            reduce using rule 79
	eof            shift, and enter state 17

	Function       goto state 15
	Lineno         goto state 16

State 10

	Declaration -> Lineno . Type IdList ';'             (rule 13)

	struct         shift, and enter state 12
	int            shift, and enter state 13
	bool           shift, and enter state 14

	Type           goto state 11

State 11

	Declaration -> Lineno Type . IdList ';'             (rule 13)

	id             shift, and enter state 23
	';'            reduce using rule 14
	','            reduce using rule 14

	IdList         goto state 22

State 12

	Type -> struct . id                                 (rule 10)

	id             shift, and enter state 21


State 13

	Type -> int .                                       (rule 8)

	id             reduce using rule 8
	'{'            reduce using rule 8
	';'            reduce using rule 8
	','            reduce using rule 8


State 14

	Type -> bool .                                      (rule 9)

	id             reduce using rule 9
	'{'            reduce using rule 9
	';'            reduce using rule 9
	','            reduce using rule 9


State 15

	Functions -> Functions Function .                   (rule 18)

	fun            reduce using rule 18
	eof            reduce using rule 18


State 16

	Function -> Lineno . fun id Parameters RetType '{' Declarations StatementList '}'    (rule 19)

	fun            shift, and enter state 20


State 17

	Program -> Types Declarations Functions eof .       (rule 1)

	%eof           reduce using rule 1


State 18

	TypeSub -> Lineno struct id . '{' NestedDecl '}' ';'    (rule 4)

	'{'            shift, and enter state 19


State 19

	TypeSub -> Lineno struct id '{' . NestedDecl '}' ';'    (rule 4)

	struct         reduce using rule 5
	int            reduce using rule 5
	bool           reduce using rule 5
	'}'            reduce using rule 5

	NestedDecl     goto state 27

State 20

	Function -> Lineno fun . id Parameters RetType '{' Declarations StatementList '}'    (rule 19)

	id             shift, and enter state 26


State 21

	Type -> struct id .                                 (rule 10)

	id             reduce using rule 10
	'{'            reduce using rule 10
	';'            reduce using rule 10
	','            reduce using rule 10


State 22

	Declaration -> Lineno Type IdList . ';'             (rule 13)
	IdList -> IdList . ',' id                           (rule 16)

	';'            shift, and enter state 24
	','            shift, and enter state 25


State 23

	IdList -> id .                                      (rule 15)

	';'            reduce using rule 15
	','            reduce using rule 15


State 24

	Declaration -> Lineno Type IdList ';' .             (rule 13)

	struct         reduce using rule 13
	int            reduce using rule 13
	bool           reduce using rule 13
	fun            reduce using rule 13
	print          reduce using rule 13
	read           reduce using rule 13
	if             reduce using rule 13
	while          reduce using rule 13
	delete         reduce using rule 13
	return         reduce using rule 13
	eof            reduce using rule 13
	id             reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13


State 25

	IdList -> IdList ',' . id                           (rule 16)

	id             shift, and enter state 33


State 26

	Function -> Lineno fun id . Parameters RetType '{' Declarations StatementList '}'    (rule 19)

	'('            shift, and enter state 32

	Parameters     goto state 31

State 27

	TypeSub -> Lineno struct id '{' NestedDecl . '}' ';'    (rule 4)
	NestedDecl -> NestedDecl . Decl ';'                 (rule 6)

	struct         reduce using rule 79
	int            reduce using rule 79
	bool           reduce using rule 79
	'}'            shift, and enter state 30

	Decl           goto state 28
	Lineno         goto state 29

State 28

	NestedDecl -> NestedDecl Decl . ';'                 (rule 6)

	';'            shift, and enter state 42


State 29

	Decl -> Lineno . Type id                            (rule 7)

	struct         shift, and enter state 12
	int            shift, and enter state 13
	bool           shift, and enter state 14

	Type           goto state 41

State 30

	TypeSub -> Lineno struct id '{' NestedDecl '}' . ';'    (rule 4)

	';'            shift, and enter state 40


State 31

	Function -> Lineno fun id Parameters . RetType '{' Declarations StatementList '}'    (rule 19)

	struct         shift, and enter state 12
	int            shift, and enter state 13
	bool           shift, and enter state 14
	void           shift, and enter state 39

	Type           goto state 37
	RetType        goto state 38

State 32

	Parameters -> '(' . ')'                             (rule 20)
	Parameters -> '(' . DeclList ')'                    (rule 21)

	struct         reduce using rule 79
	int            reduce using rule 79
	bool           reduce using rule 79
	')'            shift, and enter state 36

	Decl           goto state 34
	DeclList       goto state 35
	Lineno         goto state 29

State 33

	IdList -> IdList ',' id .                           (rule 16)

	';'            reduce using rule 16
	','            reduce using rule 16


State 34

	DeclList -> Decl .                                  (rule 22)

	')'            reduce using rule 22
	','            reduce using rule 22


State 35

	Parameters -> '(' DeclList . ')'                    (rule 21)
	DeclList -> DeclList . ',' Decl                     (rule 23)

	')'            shift, and enter state 45
	','            shift, and enter state 46


State 36

	Parameters -> '(' ')' .                             (rule 20)

	struct         reduce using rule 20
	int            reduce using rule 20
	bool           reduce using rule 20
	void           reduce using rule 20


State 37

	RetType -> Type .                                   (rule 24)

	'{'            reduce using rule 24


State 38

	Function -> Lineno fun id Parameters RetType . '{' Declarations StatementList '}'    (rule 19)

	'{'            shift, and enter state 44


State 39

	RetType -> void .                                   (rule 25)

	'{'            reduce using rule 25


State 40

	TypeSub -> Lineno struct id '{' NestedDecl '}' ';' .    (rule 4)

	struct         reduce using rule 4
	int            reduce using rule 4
	bool           reduce using rule 4
	fun            reduce using rule 4
	eof            reduce using rule 4


State 41

	Decl -> Lineno Type . id                            (rule 7)

	id             shift, and enter state 43


State 42

	NestedDecl -> NestedDecl Decl ';' .                 (rule 6)

	struct         reduce using rule 6
	int            reduce using rule 6
	bool           reduce using rule 6
	'}'            reduce using rule 6


State 43

	Decl -> Lineno Type id .                            (rule 7)

	')'            reduce using rule 7
	';'            reduce using rule 7
	','            reduce using rule 7


State 44

	Function -> Lineno fun id Parameters RetType '{' . Declarations StatementList '}'    (rule 19)

	struct         reduce using rule 11
	int            reduce using rule 11
	bool           reduce using rule 11
	print          reduce using rule 11
	read           reduce using rule 11
	if             reduce using rule 11
	while          reduce using rule 11
	delete         reduce using rule 11
	return         reduce using rule 11
	id             reduce using rule 11
	'{'            reduce using rule 11
	'}'            reduce using rule 11

	Declarations   goto state 48

State 45

	Parameters -> '(' DeclList ')' .                    (rule 21)

	struct         reduce using rule 21
	int            reduce using rule 21
	bool           reduce using rule 21
	void           reduce using rule 21


State 46

	DeclList -> DeclList ',' . Decl                     (rule 23)

	struct         reduce using rule 79
	int            reduce using rule 79
	bool           reduce using rule 79

	Decl           goto state 47
	Lineno         goto state 29

State 47

	DeclList -> DeclList ',' Decl .                     (rule 23)

	')'            reduce using rule 23
	','            reduce using rule 23


State 48

	Declarations -> Declarations . Declaration          (rule 12)
	Function -> Lineno fun id Parameters RetType '{' Declarations . StatementList '}'    (rule 19)

	struct         reduce using rule 79
	int            reduce using rule 79
	bool           reduce using rule 79
	print          reduce using rule 36
	read           reduce using rule 36
	if             reduce using rule 36
	while          reduce using rule 36
	delete         reduce using rule 36
	return         reduce using rule 36
	id             reduce using rule 36
	'{'            reduce using rule 36
	'}'            reduce using rule 36

	Declaration    goto state 8
	StatementList  goto state 49
	Lineno         goto state 10

State 49

	Function -> Lineno fun id Parameters RetType '{' Declarations StatementList . '}'    (rule 19)
	StatementList -> StatementList . Statement          (rule 37)

	print          reduce using rule 79
	read           reduce using rule 79
	if             reduce using rule 79
	while          reduce using rule 79
	delete         reduce using rule 79
	return         reduce using rule 79
	id             reduce using rule 79
	'{'            shift, and enter state 61
	'}'            shift, and enter state 62

	Statement      goto state 50
	Block          goto state 51
	Assignment     goto state 52
	Print          goto state 53
	Read           goto state 54
	Conditional    goto state 55
	Loop           goto state 56
	Delete         goto state 57
	Ret            goto state 58
	Invocation     goto state 59
	Lineno         goto state 60

State 50

	StatementList -> StatementList Statement .          (rule 37)

	print          reduce using rule 37
	read           reduce using rule 37
	if             reduce using rule 37
	while          reduce using rule 37
	delete         reduce using rule 37
	return         reduce using rule 37
	id             reduce using rule 37
	'{'            reduce using rule 37
	'}'            reduce using rule 37


State 51

	Statement -> Block .                                (rule 26)

	print          reduce using rule 26
	read           reduce using rule 26
	if             reduce using rule 26
	while          reduce using rule 26
	delete         reduce using rule 26
	return         reduce using rule 26
	id             reduce using rule 26
	'{'            reduce using rule 26
	'}'            reduce using rule 26


State 52

	Statement -> Assignment .                           (rule 27)

	print          reduce using rule 27
	read           reduce using rule 27
	if             reduce using rule 27
	while          reduce using rule 27
	delete         reduce using rule 27
	return         reduce using rule 27
	id             reduce using rule 27
	'{'            reduce using rule 27
	'}'            reduce using rule 27


State 53

	Statement -> Print .                                (rule 28)

	print          reduce using rule 28
	read           reduce using rule 28
	if             reduce using rule 28
	while          reduce using rule 28
	delete         reduce using rule 28
	return         reduce using rule 28
	id             reduce using rule 28
	'{'            reduce using rule 28
	'}'            reduce using rule 28


State 54

	Statement -> Read .                                 (rule 29)

	print          reduce using rule 29
	read           reduce using rule 29
	if             reduce using rule 29
	while          reduce using rule 29
	delete         reduce using rule 29
	return         reduce using rule 29
	id             reduce using rule 29
	'{'            reduce using rule 29
	'}'            reduce using rule 29


State 55

	Statement -> Conditional .                          (rule 30)

	print          reduce using rule 30
	read           reduce using rule 30
	if             reduce using rule 30
	while          reduce using rule 30
	delete         reduce using rule 30
	return         reduce using rule 30
	id             reduce using rule 30
	'{'            reduce using rule 30
	'}'            reduce using rule 30


State 56

	Statement -> Loop .                                 (rule 31)

	print          reduce using rule 31
	read           reduce using rule 31
	if             reduce using rule 31
	while          reduce using rule 31
	delete         reduce using rule 31
	return         reduce using rule 31
	id             reduce using rule 31
	'{'            reduce using rule 31
	'}'            reduce using rule 31


State 57

	Statement -> Delete .                               (rule 32)

	print          reduce using rule 32
	read           reduce using rule 32
	if             reduce using rule 32
	while          reduce using rule 32
	delete         reduce using rule 32
	return         reduce using rule 32
	id             reduce using rule 32
	'{'            reduce using rule 32
	'}'            reduce using rule 32


State 58

	Statement -> Ret .                                  (rule 33)

	print          reduce using rule 33
	read           reduce using rule 33
	if             reduce using rule 33
	while          reduce using rule 33
	delete         reduce using rule 33
	return         reduce using rule 33
	id             reduce using rule 33
	'{'            reduce using rule 33
	'}'            reduce using rule 33


State 59

	Statement -> Invocation .                           (rule 34)

	print          reduce using rule 34
	read           reduce using rule 34
	if             reduce using rule 34
	while          reduce using rule 34
	delete         reduce using rule 34
	return         reduce using rule 34
	id             reduce using rule 34
	'{'            reduce using rule 34
	'}'            reduce using rule 34


State 60

	Assignment -> Lineno . LValue '=' Expression ';'    (rule 38)
	Print -> Lineno . print Expression Endl ';'         (rule 39)
	Read -> Lineno . read LValue ';'                    (rule 42)
	Conditional -> Lineno . if '(' Expression ')' Block ElseBlock    (rule 43)
	Loop -> Lineno . while '(' Expression ')' Block     (rule 46)
	Delete -> Lineno . delete Expression ';'            (rule 47)
	Ret -> Lineno . return MaybeExpr ';'                (rule 48)
	Invocation -> Lineno . id Arguments ';'             (rule 51)

	print          shift, and enter state 66
	read           shift, and enter state 67
	if             shift, and enter state 68
	while          shift, and enter state 69
	delete         shift, and enter state 70
	return         shift, and enter state 71
	id             shift, and enter state 72
			(reduce using rule 79)


	LValue         goto state 64
	Lineno         goto state 65

State 61

	Block -> '{' . StatementList '}'                    (rule 35)

	print          reduce using rule 36
	read           reduce using rule 36
	if             reduce using rule 36
	while          reduce using rule 36
	delete         reduce using rule 36
	return         reduce using rule 36
	id             reduce using rule 36
	'{'            reduce using rule 36
	'}'            reduce using rule 36

	StatementList  goto state 63

State 62

	Function -> Lineno fun id Parameters RetType '{' Declarations StatementList '}' .    (rule 19)

	fun            reduce using rule 19
	eof            reduce using rule 19


State 63

	Block -> '{' StatementList . '}'                    (rule 35)
	StatementList -> StatementList . Statement          (rule 37)

	print          reduce using rule 79
	read           reduce using rule 79
	if             reduce using rule 79
	while          reduce using rule 79
	delete         reduce using rule 79
	return         reduce using rule 79
	id             reduce using rule 79
	'{'            shift, and enter state 61
	'}'            shift, and enter state 93

	Statement      goto state 50
	Block          goto state 51
	Assignment     goto state 52
	Print          goto state 53
	Read           goto state 54
	Conditional    goto state 55
	Loop           goto state 56
	Delete         goto state 57
	Ret            goto state 58
	Invocation     goto state 59
	Lineno         goto state 60

State 64

	Assignment -> Lineno LValue . '=' Expression ';'    (rule 38)

	'='            shift, and enter state 92


State 65

	LValue -> Lineno . id                               (rule 52)
	LValue -> Lineno . LValue '.' id                    (rule 53)

	id             shift, and enter state 91
			(reduce using rule 79)


	LValue         goto state 90
	Lineno         goto state 65

State 66

	Print -> Lineno print . Expression Endl ';'         (rule 39)

	true           reduce using rule 79
	false          reduce using rule 79
	new            reduce using rule 79
	null           reduce using rule 79
	id             reduce using rule 79
	num            reduce using rule 79
	'-'            reduce using rule 79
	'('            shift, and enter state 82
			(reduce using rule 79)

	'!'            reduce using rule 79

	Expression     goto state 89
	Boolterm       goto state 74
	Simple         goto state 75
	Term           goto state 76
	Unary          goto state 77
	Selector       goto state 78
	Factor         goto state 79
	Lineno         goto state 81

State 67

	Read -> Lineno read . LValue ';'                    (rule 42)

	id             reduce using rule 79

	LValue         goto state 88
	Lineno         goto state 65

State 68

	Conditional -> Lineno if . '(' Expression ')' Block ElseBlock    (rule 43)

	'('            shift, and enter state 87


State 69

	Loop -> Lineno while . '(' Expression ')' Block     (rule 46)

	'('            shift, and enter state 86


State 70

	Delete -> Lineno delete . Expression ';'            (rule 47)

	true           reduce using rule 79
	false          reduce using rule 79
	new            reduce using rule 79
	null           reduce using rule 79
	id             reduce using rule 79
	num            reduce using rule 79
	'-'            reduce using rule 79
	'('            shift, and enter state 82
			(reduce using rule 79)

	'!'            reduce using rule 79

	Expression     goto state 85
	Boolterm       goto state 74
	Simple         goto state 75
	Term           goto state 76
	Unary          goto state 77
	Selector       goto state 78
	Factor         goto state 79
	Lineno         goto state 81

State 71

	Ret -> Lineno return . MaybeExpr ';'                (rule 48)

	true           reduce using rule 79
	false          reduce using rule 79
	new            reduce using rule 79
	null           reduce using rule 79
	id             reduce using rule 79
	num            reduce using rule 79
	'-'            reduce using rule 79
	'('            shift, and enter state 82
			(reduce using rule 79)

	';'            reduce using rule 49
	'!'            reduce using rule 79

	MaybeExpr      goto state 83
	Expression     goto state 84
	Boolterm       goto state 74
	Simple         goto state 75
	Term           goto state 76
	Unary          goto state 77
	Selector       goto state 78
	Factor         goto state 79
	Lineno         goto state 81

State 72

	Invocation -> Lineno id . Arguments ';'             (rule 51)

	true           reduce using rule 79
	false          reduce using rule 79
	new            reduce using rule 79
	null           reduce using rule 79
	id             reduce using rule 79
	num            reduce using rule 79
	'-'            reduce using rule 79
	'('            shift, and enter state 82
			(reduce using rule 79)

	'!'            reduce using rule 79

	Expression     goto state 73
	Boolterm       goto state 74
	Simple         goto state 75
	Term           goto state 76
	Unary          goto state 77
	Selector       goto state 78
	Factor         goto state 79
	Arguments      goto state 80
	Lineno         goto state 81

State 73

	Arguments -> Expression .                           (rule 77)

	endl           reduce using rule 77
	boolOp         reduce using rule 77
	cmpOp          reduce using rule 77
	'+'            reduce using rule 77
	'-'            reduce using rule 77
	'*'            reduce using rule 77
	'/'            reduce using rule 77
	')'            reduce using rule 77
	';'            reduce using rule 77
	','            reduce using rule 77
	'.'            reduce using rule 77


State 74

	Expression -> Boolterm .                            (rule 54)

	endl           reduce using rule 54
	boolOp         reduce using rule 54
	cmpOp          reduce using rule 54
	'+'            reduce using rule 54
	'-'            reduce using rule 54
	'*'            reduce using rule 54
	'/'            reduce using rule 54
	')'            reduce using rule 54
	';'            reduce using rule 54
	','            reduce using rule 54
	'.'            reduce using rule 54


State 75

	Boolterm -> Simple .                                (rule 56)

	endl           reduce using rule 56
	boolOp         reduce using rule 56
	cmpOp          reduce using rule 56
	'+'            reduce using rule 56
	'-'            reduce using rule 56
	'*'            reduce using rule 56
	'/'            reduce using rule 56
	')'            reduce using rule 56
	';'            reduce using rule 56
	','            reduce using rule 56
	'.'            reduce using rule 56


State 76

	Simple -> Term .                                    (rule 58)

	endl           reduce using rule 58
	boolOp         reduce using rule 58
	cmpOp          reduce using rule 58
	'+'            reduce using rule 58
	'-'            reduce using rule 58
	'*'            reduce using rule 58
	'/'            reduce using rule 58
	')'            reduce using rule 58
	';'            reduce using rule 58
	','            reduce using rule 58
	'.'            reduce using rule 58


State 77

	Term -> Unary .                                     (rule 61)

	endl           reduce using rule 61
	boolOp         reduce using rule 61
	cmpOp          reduce using rule 61
	'+'            reduce using rule 61
	'-'            reduce using rule 61
	'*'            reduce using rule 61
	'/'            reduce using rule 61
	')'            reduce using rule 61
	';'            reduce using rule 61
	','            reduce using rule 61
	'.'            reduce using rule 61


State 78

	Unary -> Selector .                                 (rule 64)

	endl           reduce using rule 64
	boolOp         reduce using rule 64
	cmpOp          reduce using rule 64
	'+'            reduce using rule 64
	'-'            reduce using rule 64
	'*'            reduce using rule 64
	'/'            reduce using rule 64
	')'            reduce using rule 64
	';'            reduce using rule 64
	','            reduce using rule 64
	'.'            reduce using rule 64


State 79

	Selector -> Factor .                                (rule 67)

	endl           reduce using rule 67
	boolOp         reduce using rule 67
	cmpOp          reduce using rule 67
	'+'            reduce using rule 67
	'-'            reduce using rule 67
	'*'            reduce using rule 67
	'/'            reduce using rule 67
	')'            reduce using rule 67
	';'            reduce using rule 67
	','            reduce using rule 67
	'.'            reduce using rule 67


State 80

	Invocation -> Lineno id Arguments . ';'             (rule 51)
	Arguments -> Arguments . ',' Expression             (rule 78)

	';'            shift, and enter state 118
	','            shift, and enter state 119


State 81

	Expression -> Lineno . Boolterm boolOp Boolterm     (rule 55)
	Boolterm -> Lineno . Simple cmpOp Simple            (rule 57)
	Simple -> Lineno . Term '+' Term                    (rule 59)
	Simple -> Lineno . Term '-' Term                    (rule 60)
	Term -> Lineno . Unary '*' Unary                    (rule 62)
	Term -> Lineno . Unary '/' Unary                    (rule 63)
	Unary -> Lineno . '!' Selector                      (rule 65)
	Unary -> Lineno . '-' Selector                      (rule 66)
	Selector -> Lineno . Selector '.' id                (rule 68)
	Factor -> Lineno . id                               (rule 70)
	Factor -> Lineno . id Arguments                     (rule 71)
	Factor -> Lineno . num                              (rule 72)
	Factor -> Lineno . true                             (rule 73)
	Factor -> Lineno . false                            (rule 74)
	Factor -> Lineno . new id                           (rule 75)
	Factor -> Lineno . null                             (rule 76)

	true           shift, and enter state 110
			(reduce using rule 79)

	false          shift, and enter state 111
			(reduce using rule 79)

	new            shift, and enter state 112
			(reduce using rule 79)

	null           shift, and enter state 113
			(reduce using rule 79)

	id             shift, and enter state 114
			(reduce using rule 79)

	num            shift, and enter state 115
			(reduce using rule 79)

	'-'            shift, and enter state 116
			(reduce using rule 79)

	'('            shift, and enter state 82
			(reduce using rule 79)

	'!'            shift, and enter state 117
			(reduce using rule 79)


	Boolterm       goto state 104
	Simple         goto state 105
	Term           goto state 106
	Unary          goto state 107
	Selector       goto state 108
	Factor         goto state 79
	Lineno         goto state 109

State 82

	Factor -> '(' . Expression ')'                      (rule 69)

	true           reduce using rule 79
	false          reduce using rule 79
	new            reduce using rule 79
	null           reduce using rule 79
	id             reduce using rule 79
	num            reduce using rule 79
	'-'            reduce using rule 79
	'('            shift, and enter state 82
			(reduce using rule 79)

	'!'            reduce using rule 79

	Expression     goto state 103
	Boolterm       goto state 74
	Simple         goto state 75
	Term           goto state 76
	Unary          goto state 77
	Selector       goto state 78
	Factor         goto state 79
	Lineno         goto state 81

State 83

	Ret -> Lineno return MaybeExpr . ';'                (rule 48)

	';'            shift, and enter state 102


State 84

	MaybeExpr -> Expression .                           (rule 50)

	';'            reduce using rule 50


State 85

	Delete -> Lineno delete Expression . ';'            (rule 47)

	';'            shift, and enter state 101


State 86

	Loop -> Lineno while '(' . Expression ')' Block     (rule 46)

	true           reduce using rule 79
	false          reduce using rule 79
	new            reduce using rule 79
	null           reduce using rule 79
	id             reduce using rule 79
	num            reduce using rule 79
	'-'            reduce using rule 79
	'('            shift, and enter state 82
			(reduce using rule 79)

	'!'            reduce using rule 79

	Expression     goto state 100
	Boolterm       goto state 74
	Simple         goto state 75
	Term           goto state 76
	Unary          goto state 77
	Selector       goto state 78
	Factor         goto state 79
	Lineno         goto state 81

State 87

	Conditional -> Lineno if '(' . Expression ')' Block ElseBlock    (rule 43)

	true           reduce using rule 79
	false          reduce using rule 79
	new            reduce using rule 79
	null           reduce using rule 79
	id             reduce using rule 79
	num            reduce using rule 79
	'-'            reduce using rule 79
	'('            shift, and enter state 82
			(reduce using rule 79)

	'!'            reduce using rule 79

	Expression     goto state 99
	Boolterm       goto state 74
	Simple         goto state 75
	Term           goto state 76
	Unary          goto state 77
	Selector       goto state 78
	Factor         goto state 79
	Lineno         goto state 81

State 88

	Read -> Lineno read LValue . ';'                    (rule 42)

	';'            shift, and enter state 98


State 89

	Print -> Lineno print Expression . Endl ';'         (rule 39)

	endl           shift, and enter state 97
	';'            reduce using rule 40

	Endl           goto state 96

State 90

	LValue -> Lineno LValue . '.' id                    (rule 53)

	'.'            shift, and enter state 95


State 91

	LValue -> Lineno id .                               (rule 52)

	'='            reduce using rule 52
	';'            reduce using rule 52
	'.'            reduce using rule 52


State 92

	Assignment -> Lineno LValue '=' . Expression ';'    (rule 38)
